--- a/package.json
+++ b/package.json
@@ -67,8 +67,10 @@
     "@dcloudio/uni-quickapp-webview": "^2.0.1-34920220607002",
     "@dcloudio/uni-stat": "^2.0.1-34920220607002",
     "@vue/shared": "^3.0.0",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "qs": "^6.10.5",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
@@ -93,7 +95,10 @@
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "mockjs": "^1.1.0",
     "postcss-comment": "^2.0.0",
+    "sass": "^1.52.2",
+    "sass-loader": "^10.2.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
